# schema-analyzer

./: Cargo.toml
src/: main.rs
