[package]
name = "schema-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
mongodb = "2.5.0"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
jsonschema = "0.17.0"
serde = { version = "1.0.96", features = ["derive"] }
futures = "0.3"
